--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "ag-grid-community": "^29.2.0",
+    "ag-grid-enterprise": "^29.2.0",
     "ag-grid-react": "^29.2.0",
     "gh-pages": "^5.0.0",
+    "install": "^0.13.0",
     "node-sass": "^7.0.3",
+    "npm": "^9.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
